--- a/Group22Assignment2.tex
+++ b/Group22Assignment2.tex
@@ -384,3 +384,35 @@ As seen in \cref{fig:inst} there are 5 bits allocated to opcodes. \cref{tbl:ISA}
 %\input{Appendix.tex}
 
 \end{document}
+
+
+
+
+ASSEMBLY CODE
+
+1. LOAD R1 <- 0
+2. LOAD R2 <- 0
+3. ADD R8 = R1 + R2
+4. ADD R3 = R8 + 1
+5. ADD R4 = R8 + 20
+6. ADD R5 = R8 + 22
+7. ADD R6 = R8 + 41
+8. LOAD R3 R3
+9. LOAD R4 R4
+10. LOAD R5 R5
+11. LOAD R6 R6
+12. ADD R3 = R3 + R4
+13. ADD R3 = R3 + R5
+14. ADD R3 = R3 + R6
+15. ADD R7 = 0 + 21
+16. STORE R7 <- 255
+17. JEQ R3 === 1020 -> 19
+18. STORE R7 <- 000
+19. ADD R1 = R1 + 1
+20. JEQ R1 === 19 -> 22
+21. JUMP -> 3
+22. ADD R1 = 0 + 0
+23. ADD R2 = R2 + 20
+24. JEQ R2 === 380 -> 26
+25. JUMP -> 3
+26. END;l
