--- a/Group22Assignment2.tex
+++ b/Group22Assignment2.tex
@@ -62,7 +62,13 @@ separate-uncertainty-units = single ,
 \usepackage{multirow}
 \usepackage{fontawesome}
 \usepackage{tikz}
+% \usetikzlibrary{external}
+% \tikzexternalize[prefix=tikz/]
+\usepackage{circuitikz}
+\ctikzset{logic ports = ieee}
 \usetikzlibrary{positioning}
+\newcommand{\pin}[3]{\node[blue, font = \small, #2] at (#1) {#3};
+                     \coordinate (#3) at (#1);}
 
 %Header footer
 \usepackage{fancyhdr}
@@ -221,7 +227,7 @@ The ISA instructions are inspired from Appendix A in the assignment description.
         Subtraction           & \texttt{SUB Rx, Ry, Rz;} & \texttt{Rx = Ry - Rz}             \\
         Immediate addition    & \texttt{ADDI Rx, Ry, z;} & \texttt{Rx = Ry + z}              \\
         Immediate subtraction & \texttt{SUBI Rx, Ry, z;} & \texttt{Rx = Ry - z}              \\
-        Multiplication        & \texttt{MUL Rx, Ry, Rz;} & \texttt{Rx = Ry \(\cdot\) Rz}     \\
+        % Multiplication        & \texttt{MUL Rx, Ry, Rz;} & \texttt{Rx = Ry \(\cdot\) Rz}     \\
         \midrule
         \multicolumn{3}{c}{Logic instructions}                                               \\
         \midrule
@@ -247,84 +253,34 @@ The ISA instructions are inspired from Appendix A in the assignment description.
         \bottomrule
     \end{tabular}
 \end{table}
-To design the instructions, first the bit sizes are considered. Some are given in the assignment. If there are 16 registers, these can be reached with \(\log_2{16} = 4\) bits. Values for the logic and arithmetic operations are 16 bit as well as addresses in the memory. The opcodes fit within 5 bits.\newline
-The instructions have 3 types: Register type, immediate type and jump type. They are laid out as shown in \cref{fig:inst}.
+To design the instructions, first the bit sizes are considered. Some are given in the assignment. If there are 16 registers, these can be reached with \(\log_2{16} = 4\) bits. Values for the logic and arithmetic operations are 16 bit as well as addresses in the memory. The opcodes fit within 4 bits.\newline
+The instruction layout is laid out in \cref{fig:inst}.
 \begin{figure}[H]
     \centering
-    \caption{Instruction layouts.}\label{fig:inst}
-    \begin{subfigure}{\textwidth}
         \centering
-        \caption{Register type instruction. R1 and 2 are operands, Rd is the destination register.}\label{fig:rinst}
+        \caption{Instruction layout. R1 and 2 are operands, Rd is the destination register. Remaining bits are used for either memory address or immediate value.}\label{fig:inst}
         \resizebox{\textwidth}{!}{%
             \begin{tikzpicture}
                 \draw[black, very thick] (0,0) rectangle (32,2); % INST box
-                \draw[fill=green!20] (0,0) rectangle (5,2); % OPCODE section
-                \draw[fill=red!20] (5,0) rectangle (10,2); % Reg section
-                \draw[fill=blue!20] (10,0) rectangle (15,2); % Reg section
-                \draw[fill=yellow!20] (15,0) rectangle (20,2); % Reg section
-                \draw[fill=cyan!20] (20,0) rectangle (32,2); % Value section
-                \node[align=center] (opcode) at (2,1) {\Large OPCODE (5 bits) \\ \Large 27\(\cdots\)31};
-                \node[align=center] (rd) at (7,1) {\Large Rd (5 bits) \\ \Large 22\(\cdots\)26};
-                \node[align=center] (r1) at (12,1) {\Large R1 (5 bits) \\ \Large 17\(\cdots\)21};
-                \node[align=center] (r2) at (17,1) {\Large R2 (5 bits) \\ \Large 12\(\cdots\)16};
-                % \node[align=center] (val) at (18,1) {\Large Value (16 bit) \\ \Large 0\(\cdots\)15};
+                \draw[fill=green!20] (0,0) rectangle (4,2); % OPCODE section
+                \draw[fill=red!20] (4,0) rectangle (8,2); % Reg section
+                \draw[fill=blue!20] (8,0) rectangle (12,2); % Reg section
+                \draw[fill=yellow!20] (12,0) rectangle (16,2); % Reg section
+                \draw[fill=cyan!20] (16,0) rectangle (32,2); % Value section
+                \node[align=center] (opcode) at (2,1) {\Large OPCODE (4 bits) \\ \Large 31\(\cdots\)28};
+                \node[align=center] (rd) at (6,1) {\Large Rd (4 bits) \\ \Large 27\(\cdots\)24};
+                \node[align=center] (r1) at (10,1) {\Large R1 (4 bits) \\ \Large 23\(\cdots\)20};
+                \node[align=center] (r2) at (14,1) {\Large R2 (4 bits) \\ \Large 19\(\cdots\)16};
+                \node[align=center] (val) at (24,1) {\Large Value/address (16 bit) \\ \Large 15\(\cdots\)0};
                 % \node (zero) at (32,3) {\Large 0};
                 % \node (thirtytwo) at (0,3) {\Large 31};
                 % \draw[->, very thick] (zero) -- (32,2);
                 % \draw[->, very thick] (thirtytwo) -- (0,2);
             \end{tikzpicture}
         }%
-        \vspace{.5cm}
-    \end{subfigure}
-    \begin{subfigure}{\textwidth}
-        \centering
-        \caption{Immediate type instruction. R1 is an operand. Rd is the destination register. Value is the other operand.}\label{fig:iinst}
-        \resizebox{\textwidth}{!}{%
-            \begin{tikzpicture}
-                \draw[black, very thick] (0,0) rectangle (32,2); % INST box
-                \draw[fill=green!20] (0,0) rectangle (5,2); % OPCODE section
-                \draw[fill=red!20] (5,0) rectangle (10,2); % Reg section
-                \draw[fill=blue!20] (10,0) rectangle (15,2); % Reg section
-                \draw[fill=yellow!20] (15,0) rectangle (31,2); % Reg section
-                \draw[fill=cyan!20] (31,0) rectangle (32,2); % Value section
-                \node[align=center] (opcode) at (2,1) {\Large OPCODE (5 bits) \\ \Large 27\(\cdots\)31};
-                \node[align=center] (rd) at (7,1) {\Large Rd (5 bits) \\ \Large 22\(\cdots\)26};
-                \node[align=center] (r1) at (12,1) {\Large R1 (5 bits) \\ \Large 17\(\cdots\)21};
-                \node[align=center] (target) at (18,1) {\Large Value (16 bits) \\ \Large 1\(\cdots\)16};
-                % \node (zero) at (32,3) {\Large 0};
-                % \node (thirtytwo) at (0,3) {\Large 31};
-                % \draw[->, very thick] (zero) -- (32,2);
-                % \draw[->, very thick] (thirtytwo) -- (0,2);
-            \end{tikzpicture}
-        }%
-        \vspace{.5cm}
-    \end{subfigure}
-    \begin{subfigure}{\textwidth}
-        \centering
-        \caption{Jump type instruction. R1 and R2 are operands. Target is the target address.}\label{fig:jinst}
-        \resizebox{\textwidth}{!}{%
-            \begin{tikzpicture}
-                \draw[black, very thick] (0,0) rectangle (32,2); % INST box
-                \draw[fill=green!20] (0,0) rectangle (5,2); % OPCODE section
-                \draw[fill=red!20] (5,0) rectangle (10,2); % Reg section
-                \draw[fill=blue!20] (10,0) rectangle (15,2); % Reg section
-                \draw[fill=yellow!20] (15,0) rectangle (31,2); % Reg section
-                \draw[fill=cyan!20] (31,0) rectangle (32,2); % Value section
-                \node[align=center] (opcode) at (2,1) {\Large OPCODE (5 bits) \\ \Large 27\(\cdots\)31};
-                \node[align=center] (r1) at (7,1) {\Large R1 (5 bits) \\ \Large 22\(\cdots\)26};
-                \node[align=center] (r2) at (12,1) {\Large R2 (5 bits) \\ \Large 17\(\cdots\)21};
-                \node[align=center] (target) at (18,1) {\Large Target (16 bits) \\ \Large 1\(\cdots\)16};
-                % \node (zero) at (32,3) {\Large 0};
-                % \node (thirtytwo) at (0,3) {\Large 31};
-                % \draw[->, very thick] (zero) -- (32,2);
-                % \draw[->, very thick] (thirtytwo) -- (0,2);
-            \end{tikzpicture}
-        }%
-    \end{subfigure}
 \end{figure}
 \subsubsection{Opcodes}
-As seen in \cref{fig:inst} there are 5 bits allocated to opcodes. \cref{tbl:ISA} accounts for eight register type operations, four jump types, three immediate types and two runtime operations. The encoding scheme uses significant bits to determine the type of operation. The first bit tells if the instruction is runtime or not. Second bit tells if the instruction is of register type or jump/immediate type. For the latter the third bit determines if the instruction is of jump or immediate type. The scheme is laid out in \cref{tbl:opcode}. Using bits to determine the instruction type, designing the chip decoding becomes easier.
-
+As seen in \cref{fig:inst} there are 4 bits allocated to opcodes. \cref{tbl:ISA} accounts for seven register type operations, four jump types, three immediate types and two runtime operations.
 \begin{table}[H]
     \centering
     \caption{OPCODE instruction bits.}\label{tbl:opcode}
@@ -332,31 +288,145 @@ As seen in \cref{fig:inst} there are 5 bits allocated to opcodes. \cref{tbl:ISA}
         \toprule
         Instruction type           & OPCODE bits & Instruction   \\
         \midrule
-        \multirow{8}{*}{Register}  & 00000       & \texttt{ADD}  \\
-                                   & 00001       & \texttt{SUB}  \\
-                                   & 00010       & \texttt{MUL}  \\
-                                   & 00011       & \texttt{OR}   \\
-                                   & 00100       & \texttt{AND}  \\
-                                   & 00101       & \texttt{NOT}  \\
-                                   & 00110       & \texttt{LD}   \\
-                                   & 00111       & \texttt{SD}   \\
+        \multirow{7}{*}{Register}  & 0001       & \texttt{ADD}  \\
+                                   & 0010       & \texttt{SUB}  \\
+                                   & 0011       & \texttt{OR}   \\
+                                   & 0100       & \texttt{AND}  \\
+                                   & 0101       & \texttt{NOT}  \\
+                                   & 0110       & \texttt{LD}   \\
+                                   & 0111       & \texttt{SD}   \\
         \midrule
-        \multirow{4}{*}{Jump}      & 01000       & \texttt{JMP}  \\
-                                   & 01001       & \texttt{JEQ}  \\
-                                   & 01010       & \texttt{JLT}  \\
-                                   & 01011       & \texttt{JGT}  \\
+        \multirow{4}{*}{Jump}      & 1000       & \texttt{JMP}  \\
+                                   & 1001       & \texttt{JEQ}  \\
+                                   & 1010       & \texttt{JLT}  \\
+                                   & 1011       & \texttt{JGT}  \\
         \midrule
-        \multirow{3}{*}{Immediate} & 01100       & \texttt{ADDI} \\
-                                   & 01101       & \texttt{SUBI} \\
-                                   & 01110       & \texttt{LI}   \\
+        \multirow{3}{*}{Immediate} & 1100       & \texttt{ADDI} \\
+                                   & 1101       & \texttt{SUBI} \\
+                                   & 1110       & \texttt{LI}   \\
         \midrule
-        \multirow{2}{*}{Runtime}   & 10000       & \texttt{NOP}  \\
-                                   & 11111       & \texttt{END}  \\
+        \multirow{2}{*}{Runtime}   & 0000       & \texttt{NOP}  \\
+                                   & 1111       & \texttt{END}  \\
         \bottomrule
     \end{tabular}
 \end{table}
 \subsection{Compiled program}
 \subsection{CPU block}
+\tikzset{ALU/.style={muxdemux, muxdemux def={
+                    Lh=7, NL=2, Rh=3, NR=2, NB=0, NT=1, w=4, inset w=1, inset Lh=1, inset Rh=0, square pins=1}}}
+\tikzset{PC/.style={muxdemux, muxdemux def={
+                    Lh = 6, Rh = 6, w = 6, NL = 4, NR = 1, NT = 0, NB = 0}}}
+\tikzset{ROM/.style={muxdemux, muxdemux def={
+                    Lh = 6, Rh = 6, w = 6, NL = 0, NR = 2, NT = 0, NB = 0}}}
+\tikzset{RAM/.style={muxdemux, muxdemux def={
+                    Lh = 6, Rh = 6, w = 6, NL = 3, NR = 1, NT = 0, NB = 0}}}
+\tikzset{REG/.style={muxdemux, muxdemux def={
+                    Lh = 6, Rh = 6, w = 6, NL = 5, NR = 2, NT = 0, NB = 0}}}
+\tikzset{CU/.style={muxdemux, muxdemux def={
+                    Lh = 6, Rh = 6, w = 6, NL = 1, NR = 7, NT = 0, NB = 0}}}
+\tikzset{MUX/.style={muxdemux, muxdemux def={
+                    Lh=5, NL=2, Rh=2, NR=1, NB=0, NT=1, w=2, inset w=0, inset Lh=0, inset Rh=0, square pins=1}}}
+\begin{figure}[H]
+    \centering
+    \caption{Block diagram of the CPU architecture.}\label{fig:cpu}
+    \resizebox{\textwidth}{!}{
+        \begin{circuitikz}
+            \draw [help lines,dashed] (-15,-10) grid (10,10);
+            % \node [above] at (0,0) {Origo};
+            \node [circ] at (0,0) {};
+            \node[REG, align=left] (reg) at (0,0) {\ttfamily Register \\ \ttfamily File};
+            \pin{reg.lpin 1}{above left}{aSel}
+            \pin{reg.lpin 2}{above left}{bSel}
+            \pin{reg.lpin 3}{above left}{writeData}
+            \pin{reg.lpin 4}{above left}{writeSel}
+            \pin{reg.lpin 5}{above left}{writeEnable}
+            \pin{reg.rpin 1}{above right}{a}
+            \pin{reg.rpin 2}{above right}{b}
+            \node[CU, above = 1 of reg, align=left] (cu) {\ttfamily Controll \\ \ttfamily Unit};
+            \pin{cu.lpin 1}{above left}{opcode}
+            % \node[RAM, below = 5 of reg, align=left] (ram) {\ttfamily Data \\ \ttfamily Memory};
+            % \pin{ram.lpin 1}{above left}{dataWrite}
+            % \pin{ram.lpin 2}{above left}{address}
+            % \pin{ram.lpin 3}{above left}{writeEnable}
+            % \pin{ram.rpin 1}{above right}{dataRead}
+            \node[ALU, right = 5 of reg] (alu) {\ttfamily ALU};
+            \pin{alu.lpin 1}{left}{operand 1}
+            \pin{alu.lpin 2}{below left}{operand 2}
+            \pin{alu.tpin 1}{right}{sel}
+            \pin{alu.rpin 1}{above right}{result}
+            \pin{alu.rpin 2}{below right}{comparison results}
+            \node[ROM, left = 8 of reg, align=left] (rom) {\ttfamily Program \\ \ttfamily Memory};
+            \pin{rom.rpin 1}{above right}{instructionRead}
+            \pin{rom.rpin 2}{right}{address}
+            \node[PC, above = 1 of rom, align=left] (pc) {\ttfamily Program \\ \ttfamily Counter};
+            \pin{pc.lpin 1}{above left}{programCounterJump}
+            \pin{pc.lpin 2}{above left}{jump}
+            \pin{pc.lpin 3}{above left}{stop}
+            \pin{pc.lpin 4}{above left}{run}
+            \node[blue, font = \small, right, align=left] at (pc.rpin 1) {program\\Counter};
+            \coordinate (step0) at (-6,2);
+            \coordinate (step1) at (-6.5,0);
+            \node at (rom.rpin 1 -| step1) [jump crossing] (y) {};
+            \draw (rom.rpin 1) -- (y.west);
+            \draw (y.east) -- (rom.rpin 1 -| step0);
+            \draw (rom.rpin 1 -| step0) -- (step0 |- cu.lpin 1) -- (cu.lpin 1);
+            \node[below left = .1 of cu.lpin 1] {instruction[31..28]};
+            \draw (reg.lpin 1 -| step0) -- (reg.lpin 1);
+            \draw (rom.rpin 1 -| step0) |- (reg.lpin 2 -| step0) -- (reg.lpin 2);
+            \node at (-6,0) [jump crossing] (x) {};
+            \draw (rom.rpin 1 -| step0) -| (x.north);
+            \draw (x.south) |- (reg.lpin 4);
+            \node[above] at (-4.5,1.3) {instruction[23..20]};
+            \node[above] at (-4.5,.6) {instruction[19..16]};
+            \node[above] at (-4.5,-.8) {instruction[27..24]};
+            \node at (x -| y) [jump crossing] (z) {};
+            \draw (cu.rpin 1) -| (2,6.5) -| (y.north);
+            \draw (y.south) |- (z.north);
+            \draw (z.south) |- (reg.lpin 5);
+            \pin{cu.rpin 1}{above right}{writeRegister}
+            \coordinate (step2) at (4,0);
+            \coordinate (step3) at (2.5,0);
+            \node[MUX, right = 1 of reg.rpin 2, anchor = lpin 1] (alumux) {\ttfamily MUX};
+            \pin{cu.rpin 7}{below right}{immediateOperand}
+            \node at (reg.rpin 1 -| alumux.tpin 1) [jump crossing] (i) {};
+            \draw (reg.rpin 1) |- (i.west);
+            \draw (i.east) -| (alu.lpin 1);
+            \draw (cu.rpin 7) |- (3,2) -| (i.north);
+            \draw (i.south) -- (alumux.tpin 1);
+            \node at (reg.rpin 2 -| step3) [jump crossing] (j) {};
+            \draw (reg.rpin 2) -- (j.west);
+            \draw (j.east) -- (alumux.lpin 1);
+            \draw (alumux.rpin 1) |- (alu.lpin 2);
+            \pin{alumux.lpin 1}{above}{0}
+            \pin{alumux.lpin 2}{above}{1}
+            \draw (cu.rpin 6) -| (alu.tpin 1);
+            \pin{cu.rpin 6}{below right}{aluFunc}
+            \pin{cu.rpin 2}{above right}{jump}
+            \pin{cu.rpin 3}{above right}{stop}
+            \pin{cu.rpin 4}{above right}{run}
+            \coordinate (step4) at (-14.5,0);
+            \node at (step4 |- pc.lpin 2) [jump crossing] (h) {};
+            \node at (step4 |- pc.lpin 3) [jump crossing] (k) {};
+            \node at (step4 |- pc.lpin 4) [jump crossing] (l) {};
+            \draw (cu.rpin 2) -| (4,7) -| (-16.5,5) |- (h.west);
+            \draw (h.east) -- (pc.lpin 2);
+            \draw (cu.rpin 3) -| (4.5,7.5) -| (-17,5) |- (k.west);
+            \draw (k.east) -- (pc.lpin 3);
+            \draw (cu.rpin 4) -| (5,8) -| (-17.5,5) |- (l.west);
+            \draw (l.east) -- (pc.lpin 4);
+            \draw (pc.rpin 1) |- (-13.3,2) -- (-13.3,-2) -| (rom.rpin 2);
+            \node at (-7,0) [jump crossing] (m) {};
+            \draw (rom.rpin 1 -| m) -- (m.north);
+            \node at (alumux.lpin 2 -| j) [jump crossing] (n) {};
+            \draw (m.south) |- (n.west);
+            \draw (n.east) -- (alumux.lpin 2);
+            \node at (0, -2.5) {instruction[15..0]};
+            \draw (reg.lpin 3) -- (x.east);
+            \draw (x.west) -- (z.east);
+            \draw (z.west) -- (m.east);
+        \end{circuitikz}
+    }
+\end{figure}
 \section{Implementation}
 \emph{Briefly discuss the implementation in Chisel of your design. You can include some code snippets if these are relevant to explain certain aspects of the implementation. In other words, try to answer the question “What does a reader need to know about your Chisel implementation?”}
 \section{Test and analysis}
