--- a/Group22Assignment2.tex
+++ b/Group22Assignment2.tex
@@ -59,6 +59,7 @@ separate-uncertainty-units = single ,
 \usepackage{verbatim}
 \usepackage[space]{grffile}
 \usepackage[final]{pdfpages}
+\usepackage{pdflscape}
 \usepackage{multirow}
 \usepackage{fontawesome}
 \usepackage{tikz}
@@ -311,7 +312,7 @@ As seen in \cref{fig:inst} there are 4 bits allocated to opcodes. \cref{tbl:ISA}
     \end{tabular}
 \end{table}
 \subsection{Compile and encode}
-\begin{listing}
+\begin{listing}[H]
     \centering
     \caption[short]{The program compiled to assembly}\label{lst:ass}
     \begin{minted}{mips}
@@ -343,122 +344,210 @@ JUMP -> 3
 END;l
     \end{minted}
 \end{listing}
-\subsection{CPU block}
-\tikzset{ALU/.style={muxdemux, muxdemux def={
-                    Lh=7, NL=2, Rh=3, NR=2, NB=0, NT=1, w=4, inset w=1, inset Lh=1, inset Rh=0, square pins=1}}}
-\tikzset{PC/.style={muxdemux, muxdemux def={
-                    Lh = 6, Rh = 6, w = 6, NL = 4, NR = 1, NT = 0, NB = 0}}}
-\tikzset{ROM/.style={muxdemux, muxdemux def={
-                    Lh = 6, Rh = 6, w = 6, NL = 0, NR = 2, NT = 0, NB = 0}}}
-\tikzset{RAM/.style={muxdemux, muxdemux def={
-                    Lh = 6, Rh = 6, w = 6, NL = 3, NR = 1, NT = 0, NB = 0}}}
-\tikzset{REG/.style={muxdemux, muxdemux def={
-                    Lh = 6, Rh = 6, w = 6, NL = 5, NR = 2, NT = 0, NB = 0}}}
-\tikzset{CU/.style={muxdemux, muxdemux def={
-                    Lh = 6, Rh = 6, w = 6, NL = 1, NR = 7, NT = 0, NB = 0}}}
-\tikzset{MUX/.style={muxdemux, muxdemux def={
-                    Lh=5, NL=2, Rh=2, NR=1, NB=0, NT=1, w=2, inset w=0, inset Lh=0, inset Rh=0, square pins=1}}}
-\begin{figure}[H]
-    \centering
-    \caption{Block diagram of the CPU architecture.}\label{fig:cpu}
-    \resizebox{\textwidth}{!}{
-        \begin{circuitikz}
-            \draw [help lines,dashed] (-15,-10) grid (10,10);
-            % \node [above] at (0,0) {Origo};
-            \node [circ] at (0,0) {};
-            \node[REG, align=left] (reg) at (0,0) {\ttfamily Register \\ \ttfamily File};
-            \pin{reg.lpin 1}{above left}{aSel}
-            \pin{reg.lpin 2}{above left}{bSel}
-            \pin{reg.lpin 3}{above left}{writeData}
-            \pin{reg.lpin 4}{above left}{writeSel}
-            \pin{reg.lpin 5}{above left}{writeEnable}
-            \pin{reg.rpin 1}{above right}{a}
-            \pin{reg.rpin 2}{above right}{b}
-            \node[CU, above = 1 of reg, align=left] (cu) {\ttfamily Controll \\ \ttfamily Unit};
-            \pin{cu.lpin 1}{above left}{opcode}
-            % \node[RAM, below = 5 of reg, align=left] (ram) {\ttfamily Data \\ \ttfamily Memory};
-            % \pin{ram.lpin 1}{above left}{dataWrite}
-            % \pin{ram.lpin 2}{above left}{address}
-            % \pin{ram.lpin 3}{above left}{writeEnable}
-            % \pin{ram.rpin 1}{above right}{dataRead}
-            \node[ALU, right = 5 of reg] (alu) {\ttfamily ALU};
-            \pin{alu.lpin 1}{left}{operand 1}
-            \pin{alu.lpin 2}{below left}{operand 2}
-            \pin{alu.tpin 1}{right}{sel}
-            \pin{alu.rpin 1}{above right}{result}
-            \pin{alu.rpin 2}{below right}{comparison results}
-            \node[ROM, left = 8 of reg, align=left] (rom) {\ttfamily Program \\ \ttfamily Memory};
-            \pin{rom.rpin 1}{above right}{instructionRead}
-            \pin{rom.rpin 2}{right}{address}
-            \node[PC, above = 1 of rom, align=left] (pc) {\ttfamily Program \\ \ttfamily Counter};
-            \pin{pc.lpin 1}{above left}{programCounterJump}
-            \pin{pc.lpin 2}{above left}{jump}
-            \pin{pc.lpin 3}{above left}{stop}
-            \pin{pc.lpin 4}{above left}{run}
-            \node[blue, font = \small, right, align=left] at (pc.rpin 1) {program\\Counter};
-            \coordinate (step0) at (-6,2);
-            \coordinate (step1) at (-6.5,0);
-            \node at (rom.rpin 1 -| step1) [jump crossing] (y) {};
-            \draw (rom.rpin 1) -- (y.west);
-            \draw (y.east) -- (rom.rpin 1 -| step0);
-            \draw (rom.rpin 1 -| step0) -- (step0 |- cu.lpin 1) -- (cu.lpin 1);
-            \node[below left = .1 of cu.lpin 1] {instruction[31..28]};
-            \draw (reg.lpin 1 -| step0) -- (reg.lpin 1);
-            \draw (rom.rpin 1 -| step0) |- (reg.lpin 2 -| step0) -- (reg.lpin 2);
-            \node at (-6,0) [jump crossing] (x) {};
-            \draw (rom.rpin 1 -| step0) -| (x.north);
-            \draw (x.south) |- (reg.lpin 4);
-            \node[above] at (-4.5,1.3) {instruction[23..20]};
-            \node[above] at (-4.5,.6) {instruction[19..16]};
-            \node[above] at (-4.5,-.8) {instruction[27..24]};
-            \node at (x -| y) [jump crossing] (z) {};
-            \draw (cu.rpin 1) -| (2,6.5) -| (y.north);
-            \draw (y.south) |- (z.north);
-            \draw (z.south) |- (reg.lpin 5);
-            \pin{cu.rpin 1}{above right}{writeRegister}
-            \coordinate (step2) at (4,0);
-            \coordinate (step3) at (2.5,0);
-            \node[MUX, right = 1 of reg.rpin 2, anchor = lpin 1] (alumux) {\ttfamily MUX};
-            \pin{cu.rpin 7}{below right}{immediateOperand}
-            \node at (reg.rpin 1 -| alumux.tpin 1) [jump crossing] (i) {};
-            \draw (reg.rpin 1) |- (i.west);
-            \draw (i.east) -| (alu.lpin 1);
-            \draw (cu.rpin 7) |- (3,2) -| (i.north);
-            \draw (i.south) -- (alumux.tpin 1);
-            \node at (reg.rpin 2 -| step3) [jump crossing] (j) {};
-            \draw (reg.rpin 2) -- (j.west);
-            \draw (j.east) -- (alumux.lpin 1);
-            \draw (alumux.rpin 1) |- (alu.lpin 2);
-            \pin{alumux.lpin 1}{above}{0}
-            \pin{alumux.lpin 2}{above}{1}
-            \draw (cu.rpin 6) -| (alu.tpin 1);
-            \pin{cu.rpin 6}{below right}{aluFunc}
-            \pin{cu.rpin 2}{above right}{jump}
-            \pin{cu.rpin 3}{above right}{stop}
-            \pin{cu.rpin 4}{above right}{run}
-            \coordinate (step4) at (-14.5,0);
-            \node at (step4 |- pc.lpin 2) [jump crossing] (h) {};
-            \node at (step4 |- pc.lpin 3) [jump crossing] (k) {};
-            \node at (step4 |- pc.lpin 4) [jump crossing] (l) {};
-            \draw (cu.rpin 2) -| (4,7) -| (-16.5,5) |- (h.west);
-            \draw (h.east) -- (pc.lpin 2);
-            \draw (cu.rpin 3) -| (4.5,7.5) -| (-17,5) |- (k.west);
-            \draw (k.east) -- (pc.lpin 3);
-            \draw (cu.rpin 4) -| (5,8) -| (-17.5,5) |- (l.west);
-            \draw (l.east) -- (pc.lpin 4);
-            \draw (pc.rpin 1) |- (-13.3,2) -- (-13.3,-2) -| (rom.rpin 2);
-            \node at (-7,0) [jump crossing] (m) {};
-            \draw (rom.rpin 1 -| m) -- (m.north);
-            \node at (alumux.lpin 2 -| j) [jump crossing] (n) {};
-            \draw (m.south) |- (n.west);
-            \draw (n.east) -- (alumux.lpin 2);
-            \node at (0, -2.5) {instruction[15..0]};
-            \draw (reg.lpin 3) -- (x.east);
-            \draw (x.west) -- (z.east);
-            \draw (z.west) -- (m.east);
-        \end{circuitikz}
-    }
-\end{figure}
+\begin{landscape}
+    \subsection{CPU block}
+    \tikzset{ALU/.style={muxdemux, muxdemux def={
+                        Lh=7, NL=2, Rh=3, NR=2, NB=0, NT=1, w=4, inset w=1, inset Lh=1, inset Rh=0, square pins=1}}}
+    \tikzset{PC/.style={muxdemux, muxdemux def={
+                        Lh = 6, Rh = 6, w = 6, NL = 4, NR = 1, NT = 0, NB = 0}}}
+    \tikzset{ROM/.style={muxdemux, muxdemux def={
+                        Lh = 6, Rh = 6, w = 6, NL = 0, NR = 2, NT = 0, NB = 0}}}
+    \tikzset{RAM/.style={muxdemux, muxdemux def={
+                        Lh = 6, Rh = 6, w = 6, NL = 3, NR = 1, NT = 0, NB = 0}}}
+    \tikzset{REG/.style={muxdemux, muxdemux def={
+                        Lh = 6, Rh = 6, w = 6, NL = 5, NR = 2, NT = 0, NB = 0}}}
+    \tikzset{CU/.style={muxdemux, muxdemux def={
+                        Lh = 6, Rh = 6, w = 6, NL = 1, NR = 7, NT = 0, NB = 2}}}
+    \tikzset{MUX/.style={muxdemux, muxdemux def={
+                        Lh=5, NL=2, Rh=2, NR=1, NB=0, NT=1, w=2, inset w=0, inset Lh=0, inset Rh=0, square pins=1}}}
+    \begin{figure}[H]
+        \centering
+        \caption{Block diagram of the CPU architecture.}\label{fig:cpu}
+        \resizebox{1.4\textwidth}{!}{
+            \begin{circuitikz}
+                % \draw [help lines,dashed] (-15,-10) grid (10,10);
+                % \node [above] at (0,0) {Origo};
+                % \node [circ] at (0,0) {};
+                \node[REG, align=left] (reg) at (0,0) {\ttfamily Register \\ \ttfamily File};
+                \pin{reg.lpin 1}{above left}{aSel}
+                \pin{reg.lpin 2}{above left}{bSel}
+                \pin{reg.lpin 3}{above left}{writeData}
+                \pin{reg.lpin 4}{above left}{writeSel}
+                \pin{reg.lpin 5}{above left}{writeEnable}
+                \pin{reg.rpin 1}{above right}{a}
+                \pin{reg.rpin 2}{above right}{b}
+                \node[CU, above = 1 of reg, align=left] (cu) {\ttfamily Controll \\ \ttfamily Unit};
+                \pin{cu.lpin 1}{above left}{opcode}
+                \node[ALU, right = 8 of reg] (alu) {\ttfamily ALU};
+                \pin{alu.lpin 1}{left}{operand 1}
+                \pin{alu.lpin 2}{below left}{operand 2}
+                \pin{alu.tpin 1}{right}{sel}
+                \pin{alu.rpin 1}{above right}{result}
+                \pin{alu.rpin 2}{below right}{comparison results}
+                \node[ROM, left = 8 of reg, align=left] (rom) {\ttfamily Program \\ \ttfamily Memory};
+                \pin{rom.rpin 1}{above right}{instructionRead}
+                \pin{rom.rpin 2}{right}{address}
+                \node[PC, above = 1 of rom, align=left] (pc) {\ttfamily Program \\ \ttfamily Counter};
+                \pin{pc.lpin 1}{above left}{programCounterJump}
+                \pin{pc.lpin 2}{above left}{jump}
+                \pin{pc.lpin 3}{above left}{stop}
+                \pin{pc.lpin 4}{above left}{run}
+                \node[blue, font = \small, right, align=left] at (pc.rpin 1) {program\\Counter};
+                \coordinate (step0) at (-6,2);
+                \coordinate (step1) at (-6.5,0);
+                \node at (rom.rpin 1 -| step1) [jump crossing] (y) {};
+                \draw (rom.rpin 1) -- (y.west);
+                \draw (y.east) -- (rom.rpin 1 -| step0);
+                \draw (rom.rpin 1 -| step0) -- (step0 |- cu.lpin 1) -- (cu.lpin 1);
+                \node[below left = .1 of cu.lpin 1] {instruction[31..28]};
+                \draw (reg.lpin 1 -| step0) -- (reg.lpin 1);
+                \draw (rom.rpin 1 -| step0) |- (reg.lpin 2 -| step0) -- (reg.lpin 2);
+                \node at (-6,0) [jump crossing] (x) {};
+                \draw (rom.rpin 1 -| step0) -| (x.north);
+                \draw (x.south) |- (reg.lpin 4);
+                \node[above] at (-4.5,1.3) {instruction[23..20]};
+                \node[above] at (-4.5,.6) {instruction[19..16]};
+                \node[above] at (-4.5,-.8) {instruction[27..24]};
+                \node at (x -| y) [jump crossing] (z) {};
+                \draw (cu.rpin 1) -| (2,6.5) -| (y.north);
+                \draw (y.south) |- (z.north);
+                \draw (z.south) |- (reg.lpin 5);
+                \pin{cu.rpin 1}{above right}{writeRegister}
+                \coordinate (step2) at (5.5,0);
+                \node[MUX, right = 4 of reg.rpin 2, anchor = lpin 1] (alumux) {\ttfamily MUX};
+                \pin{cu.rpin 6}{above right}{immediateOperand}
+                \node at (reg.rpin 1 -| alumux.tpin 1) [jump crossing] (i) {};
+                \node at (reg.rpin 1 -| step2) [jump crossing] (regacross) {};
+                \coordinate (ramwrite) at (2.5,0);
+                \coordinate (ramdata) at (3,0);
+                \coordinate (ramaddress) at (3.5,0);
+                \coordinate (memory) at (4,0);
+                \node at (ramwrite |- reg.rpin 1) [jump crossing] (ramacross) {};
+                \node at (ramwrite |- reg.rpin 2) [jump crossing] (rambcross) {};
+                \node at (ramaddress |- reg.rpin 2) [jump crossing] (databcross) {};
+                \node at (ramwrite |- alumux.lpin 2) [jump crossing] (ram1) {};
+                \node at (ramdata |- alumux.lpin 2) [jump crossing] (ram2) {};
+                \node at (ramaddress |- alumux.lpin 2) [jump crossing] (ram3) {};
+                \node at (memory |- reg.rpin 1) [jump crossing] (mem1) {};
+                \node at (memory |- reg.rpin 2) [jump crossing] (mem2) {};
+                \node at (memory |- alumux.lpin 2) [jump crossing] (mem3) {};
+                \draw (reg.rpin 1) -- (ramacross.west);
+                \draw (ramacross.east) -- (mem1.west);
+                \draw (mem1.east) -- (regacross.west);
+                \draw (regacross.east) |- (i.west);
+                \draw (i.east) -| (alu.lpin 1);
+                \draw (cu.rpin 6) -| (i.north);
+                \draw (cu.rpin 7) -| (regacross.north);
+                \pin{cu.rpin 7}{above right}{immediateLoad}
+                \draw (i.south) -- (alumux.tpin 1);
+                \node at (reg.rpin 2 -| step2) [jump crossing] (j) {};
+                \draw (reg.rpin 2) -- (rambcross.west);
+                \draw (rambcross.east) -- (databcross.west);
+                \draw (databcross.east) -- (mem2.west);
+                \draw (mem2.east) -- (j.west);
+                \draw (j.east) -- (alumux.lpin 1);
+                \draw (alumux.rpin 1) |- (alu.lpin 2);
+                \pin{alumux.lpin 1}{below}{0}
+                \pin{alumux.lpin 2}{above}{1}
+                \draw (cu.rpin 5) -| (alu.tpin 1);
+                \pin{cu.rpin 5}{above right}{aluFunc}
+                \pin{cu.rpin 2}{above right}{stop}
+                \pin{cu.rpin 3}{above right}{run}
+                \pin{cu.rpin 4}{above right}{jump}
+                \coordinate (step4) at (-14.5,0);
+                \coordinate (step5) at (-16.5,0);
+                \coordinate (step6) at (-17,0);
+                \node at (step4 |- pc.lpin 2) [jump crossing] (h) {};
+                \node at (step4 |- pc.lpin 3) [jump crossing] (k) {};
+                \node at (step4 |- pc.lpin 4) [jump crossing] (l) {};
+                \node at (step5 |- pc.lpin 2) [jump crossing] (j1) {};
+                \node at (step6 |- pc.lpin 2) [jump crossing] (j2) {};
+                \draw (h.east) -- (pc.lpin 2);
+                \draw (cu.rpin 2) -| (4,7) -| (-16.5,5) |- (j1.north);
+                \draw (j1.south) |- (k.west);
+                \draw (k.east) -- (pc.lpin 3);
+                \draw (cu.rpin 3) -| (4.5,7.5) -| (-17,5) |- (j2.north);
+                \draw (j2.south) |- (l.west);
+                \draw (l.east) -- (pc.lpin 4);
+                \draw (pc.rpin 1) |- (-13.3,2) -- (-13.3,-2) -| (rom.rpin 2);
+                \node at (-7,0) [jump crossing] (m) {};
+                \draw (rom.rpin 1 -| m) -- (m.north);
+                \node at (alumux.lpin 2 -| j) [jump crossing] (n) {};
+                \draw (regacross.south) -- (j.north);
+                \draw (j.south) -- (n.north);
+                \draw (m.south) |- (ram1.west);
+                \draw (ram1.east) -- (ram2.west);
+                \draw (ram2.east) -- (ram3.west);
+                \draw (ram3.east) -- (mem3.west);
+                \draw (mem3.east) -- (n.west);
+                \draw (n.east) -- (alumux.lpin 2);
+                \node at (-4, -2) {instruction[15..0]};
+                \draw (reg.lpin 3) -- (x.east);
+                \draw (x.west) -- (z.east);
+                \draw (z.west) -- (m.east);
+                \node[MUX, below = 1 of n.south, anchor = tpin 1] (immediateMux) {\ttfamily MUX};
+                \coordinate (aluOutCoord) at (15,0);
+                \node at (alu.rpin 1 -| aluOutCoord) [jump crossing] (aluOutCross) {};
+                \node at (alumux |- immediateMux.lpin 2) [jump crossing] (immediateMuxCross) {};
+                \draw (alu.rpin 1) -- (aluOutCross.west);
+                \draw (aluOutCross.east) |- (immediateMuxCross.east);
+                \draw (immediateMuxCross.west) -| (6.5,-6.7) -| (immediateMux.lpin 2);
+                \draw (n.south) -- (immediateMux.tpin 1);
+                \draw (n -| immediateMux.lpin 1) |- (immediateMux.lpin 1);
+                \pin{immediateMux.lpin 1}{below}{1}
+                \pin{immediateMux.lpin 2}{above}{0}
+                \draw (immediateMux.rpin 1) -| (immediateMuxCross.north);
+                \draw (pc.lpin 1) -| (h.north);
+                \draw (h.south) -- (k.north);
+                \draw (k.south) -- (l.north);
+                \draw (l.south) |- (-8, -2.5);
+                \coordinate (jumpcoord) at (-8,0);
+                \draw (rom.rpin 1 -| jumpcoord) -- (-8, -2.5);
+                \node[above] at (-10.2,-3) {instruction[15..0]};
+                \node [or port, right = 4 of cu.rpin 3, anchor = in 2] (or) {\ttfamily OR};
+                \draw (alu.rpin 2) -| (aluOutCross.south);
+                \draw (aluOutCross.north) |- (7,4.3) -| (or.in 2);
+                \draw (cu.rpin 4) -| (5.5,5) |- (or.in 1);
+                \draw (or.out) |- (5,8) -| (-17.5,5.5) |- (j2.west);
+                \draw (j2.east) -- (j1.west);
+                \draw (j1.east) -- (h.west);
+                \pin{cu.bpin 1}{left}{writeToMemory}
+                \draw (cu.bpin 1) |- (2,2);
+                \draw (2,2) -| (ramacross.north);
+                \draw (ramacross.south) -- (rambcross.north);
+                \draw (rambcross.south) -- (ram1.north);
+                \draw (reg.rpin 1 -| ramaddress) -- (databcross.north);
+                \draw (databcross.south) -- (ram3.north);
+                \draw (reg.rpin 2 -| ramdata) -- (ram2.north);
+                \node[RAM, below = 2.5 of reg, align=left] (ram) {\ttfamily Data \\ \ttfamily Memory};
+                \pin{ram.lpin 1}{above left}{dataWrite}
+                \pin{ram.lpin 2}{above left}{address}
+                \pin{ram.lpin 3}{above left}{writeEnable}
+                \pin{ram.rpin 1}{above right}{dataRead}
+                \draw (ram1.south) |- (-4.5,-2.5) |- (ram.lpin 3);
+                \draw (ram2.south) |- (-4,-3) |- (ram.lpin 2);
+                \draw (ram3.south) |- (-3.5,-3.5) |- (ram.lpin 1);
+                \pin{cu.bpin 2}{below}{LoadFromMemory}
+                \draw (cu.bpin 2) -| (mem1.north);
+                \draw (mem1.south) -- (mem2.north);
+                \draw (mem2.south) -- (mem3.north);
+                \node at (-7.5,-4.5) [jump crossing] (writeX) {};
+                \node[MUX, left = 1 of writeX, anchor = tpin 1] (writeMux) {\ttfamily MUX};
+                \node at (-7, -8) [jump crossing] (writeMuxX) {};
+                \draw (ram.rpin 1) |- (-6,-8) -| (writeMuxX.east);
+                \draw (writeMuxX.west) -| (writeMux.lpin 2);
+                \draw (mem3.south) |- (-6,-8.5) -| (writeMuxX.south);
+                \draw (writeMuxX.north) |- (writeX.east);
+                \draw (writeX.west) -- (writeMux.tpin 1);
+                \draw (immediateMuxCross.south) |- (-10,-9) |- (writeMux.lpin 1);
+                \draw (writeMux.rpin 1) -| (writeX.south);
+                \draw (writeX.north) |- (m.west);
+                \pin{writeMux.lpin 1}{below}{0}
+                \pin{writeMux.lpin 2}{above}{1}
+            \end{circuitikz}
+        }
+    \end{figure}
+\end{landscape}
 \section{Implementation}
 \emph{Briefly discuss the implementation in Chisel of your design. You can include some code snippets if these are relevant to explain certain aspects of the implementation. In other words, try to answer the question “What does a reader need to know about your Chisel implementation?”}
 \section{Test and analysis}
