Update on Overleaf.

--- a/Group22Assignment2.tex
+++ b/Group22Assignment2.tex
@@ -331,7 +331,7 @@ LOAD R6 R6
 ADD R3 = R3 + R4
 ADD R3 = R3 + R5
 ADD R3 = R3 + R6
-ADD R7 = 0 + 21
+ADD R7 = R8 + 21
 STORE R7 <- 255
 JEQ R3 === 1020 -> 19
 STORE R7 <- 000
